Fixade lite aligns och sånt

--- a/smallstyle.css
+++ b/smallstyle.css
@@ -207,3 +207,7 @@ a {
 .myslides {
   height: 500px;
 }
+
+#urbs_img {
+  width: 90%;
+}
